--- a/semantic_image_search/notebooks/experiments.ipynb
+++ b/semantic_image_search/notebooks/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "69690296",
    "metadata": {},
    "outputs": [],
@@ -1813,7 +1813,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env (3.11.13)",
+   "display_name": "semantic_is (3.11.13)",
    "language": "python",
    "name": "python3"
   },
