--- a/semantic_image_search/notebooks/experiments.ipynb
+++ b/semantic_image_search/notebooks/experiments.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "133c8dc3",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "'C:\\\\MY_Folder\\\\LLMOPS_GIT_Projects\\\\LIVE_LLMOPS\\\\sementic-image-search\\\\semantic_image_search\\\\notebooks\\\\images\\\\animal\\\\cat.jpg'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "d43ac46a",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "888d71f5",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "49b36333",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "59b3ea40",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "3fc733aa",
    "metadata": {},
    "outputs": [],
@@ -749,7 +749,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
+   "id": "eb451f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getenv(\"API_ENDPOINT\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "49570594",
    "metadata": {},
    "outputs": [],
@@ -759,17 +777,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "47a7e5df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://110cd66d-dca9-48c4-823b-381142394d5a.us-east-1-1.aws.cloud.qdrant.io'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "4d3f6e71",
    "metadata": {},
    "outputs": [],
@@ -779,20 +808,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "7c42c3e3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mapi_key\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: 'NoneType' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -801,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 23,
    "id": "cf7a6328",
    "metadata": {},
    "outputs": [],
@@ -811,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "id": "29a5bbe6",
    "metadata": {},
    "outputs": [],
@@ -821,17 +849,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 25,
    "id": "7b95509b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CollectionsResponse(collections=[CollectionDescription(name='semantic-image-search')])"
+       "CollectionsResponse(collections=[])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "2502da65",
    "metadata": {},
    "outputs": [],
@@ -852,17 +880,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "0c0078a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[CollectionDescription(name='semantic-image-search')]"
+       "[]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "540f6127",
    "metadata": {},
    "outputs": [],
@@ -884,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "c26ef125",
    "metadata": {},
    "outputs": [],
